[gd_scene load_steps=2 format=3 uid="uid://briv8adrnpedp"]

[ext_resource type="Script" path="res://Cenas/scrypts/screen_init.gd" id="1_fbd6w"]

[node name="Screen_init" type="Node2D"]
script = ExtResource("1_fbd6w")

[node name="btnPlay" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 251.0
offset_top = 233.0
offset_right = 554.0
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_force_pass_scroll_events = false
text = "Play
"
flat = true

[node name="lblName" type="Label" parent="."]
offset_left = 3.0
offset_top = 573.0
offset_right = 89.0
offset_bottom = 596.0
text = "Version 1.0"

[node name="lblName2" type="Label" parent="."]
offset_left = 635.0
offset_top = 539.0
offset_right = 883.0
offset_bottom = 606.0
theme_override_font_sizes/font_size = 11
text = "Arte:
Engine: Godot
Desenvolvimento: Jos√© Arthur"

[connection signal="pressed" from="btnPlay" to="." method="_on_btn_play_pressed"]
